# apps/auth-service/src/routes/auth.router.ts
@@ -1,10 +1,11 @@
 import express, { Router } from "express";
-import { userRegistetration, verifyUser } from "../controller/auth.controller";
+import { userLogin, userRegistetration, verifyUser } from "../controller/auth.controller";
 
 const router:Router = express.Router();
 
 
 router.post("/user-registration", userRegistetration);
 router.post("/verify-user", verifyUser);
+router.post("/login-user", userLogin);
 
 export default router;
