# apps/auth-service/src/swagger-output.json
@@ -6,7 +6,7 @@
     "version": "1.0.0"
   },
   "host": "localhost:6001",
-  "basePath": "/api",
+  "basePath": "/api/",
   "schemes": [
     "http"
   ],
@@ -26,11 +26,7 @@
                 },
                 "email": {
                   "example": "any"
-                },
-                "password": {
-                  "example": "any"
                 }
-
               }
             }
           }
@@ -53,10 +49,10 @@
               "type": "object",
               "properties": {
                 "email": {
-                  "example": "vuongkhiem@gmail.com"
+                  "example": "any"
                 },
                 "otp": {
-                  "example": "123456"
+                  "example": "any"
                 },
                 "password": {
                   "example": "any"
@@ -71,6 +67,33 @@
         "responses": {
           "201": {
             "description": "Created"
+          }
+        }
+      }
+    },
+    "/login-user": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           }
         }
       }
